# data-marketplace-api

./: .env  .env.template  .gitignore  .gitmodules  README.md  api-spec.json  docker-compose.yml  justfile  openapi.yaml  pyproject.toml
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: .env  config.py  db.py  gen_data.py  main.py  model.py  sparql.py  utils.py
api/app/auth/: access_control.py  auth_bearer.py  jwt_bearer.py  utils.py
api/app/db/: asset.py  model.py  reference_data.py  share.py  sparql.py  user.py  utils.py
api/app/publish/: batch.py  create_asset.py  csv.py  errors.py  response.py
api/app/routers/: manage_shares.py  users.py
api/queries/: all_mimetypes.sparql  all_update_frequencies.sparql  asset_counts_by_org.sparql  asset_detail.sparql  asset_id_title.sparql  asset_search.sparql  create_asset.sparql  create_share_request_data.sparql  delete_share_request_data.sparql  distribution_detail.sparql  get_label.sparql  get_share_request_forms.sparql  get_user_by_id.sparql  get_user_request_forms.sparql  new_user.sparql  update_share_request_form.sparql
api/queries/shares/: get_by_id.sparql  get_by_org.sparql  get_for_user.sparql  get_user_created.sparql  upsert.sparql  upsert_decision.sparql  upsert_notes.sparql
api/queries/user/: add_permissions.sparql  complete_profile.sparql  create.sparql  delete_by_id.sparql  edit_org.sparql  get_by_id.sparql  list.sparql  remove_permissions.sparql
api/test/: .env.example  README.md  admin_routes.hurl  asset_details.hurl
catalogue-backend/: .env  docker-compose.yml  justfile  openapi.json  openapi.yaml  pyproject.toml
catalogue-backend/fuseki/: Dockerfile
catalogue-backend/localdb/: fuseki-config.ttl
catalogue-backend/src/: db.py  main.py  model.py
dev/: dataservice.csv  dataset.csv  test-publish.sh  test-user-requests.sh
fuseki/: Dockerfile  assembler.ttl
fuseki/data/: dwp-address-lookup.ttl  example-datasets.ttl  mimetype-labels.ttl  mimetypes.ttl  os-postcodes-csv-distribution.ttl  os-postcodes-datset.ttl  os-postcodes-geopackage-distribution.ttl  themes.ttl  updateFrequency.ttl  vocab.ttl
localdb/: install.sh
src/: main.py  model.py
