[tool.poetry]
name = "cddo-dm-api"
version = "0.3.0"
description = ""
authors = ["Kiran Joshi <kiran.joshi@tpximpact.com>", "Madeline Kosse <madeline.kosse@tpximpact.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
rdflib = "^6.3.2"
SPARQLWrapper = "^2.0.0"
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.1.1"}
faker = "^19.2.0"
sparql-burger = "^1.0.2"
requests = "^2.31.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-multipart = "^0.0.6"
dateparser = "^1.1.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
polyfactory = "^2.7.0"
pyjwt = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
